app/src/test/resources/programs/invalid/variables/WrongKeywordsForVariables.extension
foo main() -> Int = {
    var x: Int = 3;
    var mut x: Bool = false;
}
